--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'BQ'
 - !lcsh 'Buddhism'
+- GITenberg
 title: The Essence of Buddhism
 url: http://www.gutenberg.org/ebooks/18223
